--- a/_source/2_2.md
+++ b/_source/2_2.md
@@ -35,7 +35,7 @@
 
 10. Congratulations! 恭喜恭喜。
 
-11. Do it right? 把它做对。
+11. Do it right. 把它做对。
 
 12. Do you mean it? 你是当真的吗？
 
@@ -144,7 +144,7 @@
 
 60. I've had it. 我受够了。
 
-61. It's incredible! 真是难以置信!
+61. It's incredible! 真是难以置信！
 
 62. Is it far? 很远吗？
 
@@ -193,9 +193,9 @@
 
 83. Me too. 我也一样。
 
-84. Not yet! 还没有!
+84. Not yet! 还没有！
 
-85. Relax! 放松!
+85. Relax! 放松！
 
 86. See you tomorrow. 明天见。
 
@@ -238,7 +238,7 @@
 
 104. What is he talking about? 他在说些什么？
 
-105. What terrible weather! 多坏的天气!
+105. What terrible weather! 多坏的天气！
 
 106. What's going on/What's happening/What's the problem? 怎么样啦？
 
