--- a/_source/2_3.md
+++ b/_source/2_3.md
@@ -1,281 +1,149 @@
-第三节 最疯狂、最典型 的美国发音;
-Greatest Sentences Ever to Practice［A］ Sound;
-1 If you exaggerate, you will sound fantastically American!;(如果将发音夸大一些， 你听起来会美国味十足!)
-2 A: My exam was a disaster.;我的考试简直是一 塌糊涂。
-B: You didn't pass? That's too bad. You'll have another chance.;(你没有通过吗?太遗 憾了。你会有另外 一个机会的。)
-A: No. That was my last chance.;(不，那是我最后一 次机会。)
-3 That's a fact.;(那是事实。)
-4 Saturday I am planning to go dancing.;(星期六我计划去跳舞。)
-5 I am happy/glad to have you back from Japan.;(我很高兴你从日本回 来。)
-6 That man/actor had a bad accent and bad grammar.;(那个男人/演员口音很 糟糕，且语法错误 很多。)
-7 There was a bad traffic accident.;发生了一起糟糕的交通 事故
-That hacker ran into the back of my van and killed my cat.;出租车撞到了我面包车 的后背，撞死了我的猫。
-Too bad it wasn't my wife because I loved my cat.;太遗憾了，死的不是 我太太，因为我爱我 的猫。
-8 Don't laugh behind other people's back.;(不要在背后取笑别人。)
-9 Come back after you finish your math exam.;(完成数学测验之后 回来。)
-10 My grandfather was a bad man, and he treated my grandmother very badly.;(我的祖父是个坏人， 他对祖母非常不好。)
-11 I'm so glad that nothing bad has happened.;(我很高兴没发生什么 糟糕的事情。)
-12 As a matter of fact, I think he is an asshole『讨厌的人； 肛门；屁眼儿』.;(事实上，我认为他是 个混蛋。)
-13 Look at that fat ass on that fat man.;(看看那个胖子的屁股多 大。)
-14 You're not such a had apple/bad egg after all.;(你毕竟还不是太坏。)
-15 There's always a bad apple in every class.;(每个班都有几粒老鼠 屎。)
-16 Good employees get a pat on the back, while good secretaries get a pat on the ass.;(员工表现得好老板会 拍拍他的背，而秘书做 得好老板则会拍拍 她的屁股。)
-17 She deserves a pat on the back.;(她应该得到表扬。)
-18 Pats on the back weren't enough, he wanted fast cash.;(只有表扬是不够的， 他要的是看得见、摸 得着的现金。)
-19 These back-to-back appointments are giving me a heart attack/killing me/;
-affecting my health.;(这一连串的约会使得 我疲于奔命。)
-20 Back-to-back defeats made him sad.;(连续的失败使他很 伤心。)
-21 Stop picking on me and get off my back. Man! I've had it.;(别再对我进行挑剔， 别再找我麻烦了。 我受够了!)
-22 Get off my back, will ya? I'll do it when I have time.;(别罗嗦了，好不好? 我有时间就去做。)
-23 Get your crap off my bed!;(把你那些乱七八糟的东 西从我床上搬走。)
-24 Laughter has no foreign accent.;(笑声没有外国口音。)
-25 Such men are the backbone『骨干；支柱； 基础』of the country.;(这样的人是国家的栋 梁。)
-26 Selfishness and unhappiness often go hand in hand.;自私的人通常无幸福可 言。
-27 He who laughs last laughs best.;谁笑到最后，谁就笑 得最好。
-28 The voters had a backlash against rising gas taxes.;投标人强烈反对增加汽 油税。
-29 A bad black man tried to crash the rally, but my dad called the cops.;(一个黑人坏蛋企图要混 进我们的聚会，我父亲 打电话叫来了警察。)
-30 The manager was hired at a handsome salary.;(这个经理被高薪聘用。)
-31 We must take action before it is too late.;(我们必须及早采取行 动。)
-32 Actions are more important than words.;(行动胜似语言。)
-33 That man is always handing out『给予』 unwanted advice.;(那个人总是给别人没 有用的建议。)
-34 We handed in our exams at the last minute of the class.;(在下课的最后时刻， 我们交了考试卷。)
-35 The two brothers worked hand in hand.;(两兄弟携手合作。)
-36 The family went to the graduation at Stanford.;(全家人去斯坦福大学参 加了毕业典礼。)
-37 I ran as fast as I could.;(我跑得不能再快了。)
-38 We had to act fast.;(我们不得不尽快行动。)
-39 It happened in the past.;(它发生在过去。)
-40 Don't miss your last chance.;(不要错过最后的机会。)
-41 It is absolutely impossible to cure AIDS.;(要治愈艾滋病是绝对不 可能的。)
-42 We will have a fat chance to win the game on Saturday.;(我们几乎没有可能赢得 星期六的比赛。)
-43 Casual dress is becoming more and more fashionable.;休闲服装变得越来越流 行了。
-44 The match won't catch.;(这火柴擦不着。)
-45 The dog went after a rabbit but didn't catch it.;狗追兔子，但没有逮住 兔子。
-46 The mad dog ran past Dan.;(那疯狗从丹身边跑过。)
-47 Alice dashed to the back of the shack 『简陋木屋』to stash『 藏匿；存放』the bag.;(艾丽斯跑到小木屋后面 把包藏起来。)
-48 Stan took a rabbit from his magic hat.;(斯坦从他的魔术帽里把 兔子拿出来。)
-49 A: Damn it.;(混蛋)
-B: Watch your mouth!;(嘴巴放干净一点。)
-A: I learned that bad habit from you. You should have watched your mouth first.;(这个坏习惯是你传给 我的。你要先注意 自己。)
-nasty; dirty; bad; unpleasant; disgusting; unkind; offensive;;
-bad to deal with or experience.;
-1 a nasty mind.;(卑鄙肮脏的思想)
-2 nasty language.;(污秽不堪的语言)
-3 live a cheap and nasty life.;(过低贱的生活)
-5 It's a tacky, nasty little movie.;(这是一部庸俗下流不值 一看的电影。)
-6 a nasty smell;(难闻的气味)
-7 a nasty taste;(难吃的味道)
-8 cold, wet, nasty weather(寒冷多雨的 恶劣天气);
-9 a nasty habit;(恶心)
-10 a nasty temper;(臭脾气)
-11 a nasty attack of cough;(一阵剧烈的咳嗽)
-12 a nasty accident;(严重的事故)
-13 a nasty look in his eyes;(眼露凶光)
-14 a nasty room;(脏乱的房间)
-15 a nasty book;(下流书)
-16 say nasty things about sb.;(恶语中伤某人)
-第四节 四星级·五星 级·六星级单词全面奉献 超级六星级动词：;
-Accomplish Accomplish: to succeed in doing; finish successfully; comlete.;做成功；完成；实现； 达成。
-All the following sentences may seem very difficult.;
-That's because "accomplish"is a six-star word and six-star words are;
-only found in challenging sentences!;
-With a little hard work and determination you can［accomplish］;
-your goal of mastering them all.;
-1 They accomplished their mission.;(他们完成了使命。)
-2 A lazy man can never［accomplish］ anything.;(懒惰的人永远一 事无成。)
-3 We tried to arrange a peace agreement, but ［accomplished］ nothing.;(我们试图达成和平协议， 但毫无成效。)
-4 She's accomplished a lot/great deal in the last few weeks.;(她在前几个星期里做 成了很多事情。)
-5 The task of modernization will not be accomplished in one generation.;(现代化的任务不是一 代人所能完成的。)
-6 How did they ［accomplish］so much so quickly?;(他们何以能如此迅速地 取得这么巨大的成就?)
-7 I don't think our President's visit to Japan really accomplished anything.;(我认为我们总统访日 并未取得什么真正 成效。)
-8 Crazy English is the best method to accomplish your goal of conquering English.;(疯狂英语是实现征服英 语这一目标的最好 方法。)
-9 We can absolutely ［accomplish］whatever you can with better and quicker results.;(你们能做到的事情， 我们也能做到，而且 会做得更快更好。)
-10 We need capable and experienced hands, Ideas just don't accomplish themselves.;我们需要有能力和经验的 老手，只有想法并不 能成事。
-11 Frankly speaking, I don't see what you can possibly accomplish here.;(坦率地说，我看不出 你在这儿能干出什 么来。)
-12 All this work was accomplished in a week.;(所有这些工作都是在 一个星期内完成的。)
-第五节 语法大战--两篇 文章让你吃透两条语法 第1篇：巨大的进步;
-A Big Improvement;
-1 Paul recently completed/finished a Crazy English class,;保罗最近结束了疯狂英 语的课程，
-and he's very proud of the results.;他为自己的成绩感到骄 傲。
-His family has noticed that he's speaking English more loudly, more clearly,;他的家人发现他在说英 语时，比以往更大声， 更清楚，
-more fluently and more confidently than ever before.;更流利，而且更加自信。
-His boss has noticed that he's more effective and successful in his work;他的老板发觉他在工作 中更有效率和更成功了。
-All his friends tell him that he's friendlier,;他所有的朋友都告诉他
-less shy and more outgoing than before.;他变的比以前更友好， 更直爽，胆子也大了。
-And Paul himself has noticed that;保罗自己也发现
-he's more comfortable and relaxed when he speaks in front of people;他在众人面前说英语时， 愈加轻松自如
-and he's even enjoying himself more at parties.;甚至在派对上也玩得更开 心。
-Paul is feeling much better about himself these days.;保罗这些天自我感觉 很多。
-That's why he's now recommending；Crazy English to everybody he knows.;这就是他现在向所有认 识的人推荐“疯狂英语” 的原因。
-2 Feeling good about yourself is the key to a happier and more productive life.;自我感觉良好是拥有快 乐和更有成绩感的生 活的关键。
-Being a good English speaker;作为一个口语流利者
-will definitely make you feel good about yourself.;你一定会有一种全新的 感觉。
-Paul recently completed/finished a Crazy English class,;保罗最近结束了疯狂英 语的课程，
-and he's very proud of the results.;他为自己的成绩感到 骄傲。
-His family has noticed that he's speaking English more loudly, more clearly,;他的家人发现他在说英 语时，比以往更大声， 更清楚，
-more fluently and more confidently than ever before.;更流利，而且更加自信。
-His boss has noticed that he's more effective and successful in his work;他的老板发觉他在工作 中更有效率和更成功了。
-All his friends tell him that he's friendlier,;他所有的朋友都告诉他
-less shy and more outgoing than before.;他变的比以前更友好， 更直爽，胆子也大了。
-And Paul himself has noticed that;保罗自己也发现
-he's more comfortable and relaxed when he speaks in front of people;他在众人面前说英语时， 愈加轻松自如
-and he's even enjoying himself more at parties.;甚至在派对上也玩得更 开心。
-Paul is feeling much better about himself these days.;保罗这些天自我感觉 很多。
-That's why he's now recommending；Crazy English to everybody he knows.;这就是他现在向所有认 识的人推荐“疯狂英语” 的原因。
-2 Feeling good about yourself is the key to a happier and more productive life.;自我感觉良好是拥有快 乐和更有成绩感的生活的 关键。
-Being a good English speaker;作为一个口语流利者
-will definitely make you feel good about yourself.;你一定会有一种全新的 感觉。
-第2篇：辛劳的回报 Hard Work Pays Off;
-1 2000 was a great year for Donna.;2000年对唐娜来说真是太 幸运了
-In January she was hired by the Stone-Cliz;她一月份被Stone—Cliz
-International English Promotion Company as a personal assistant.;国际英语推广公司聘为 私人助理，
-In Marych she was sent to school by the company to study information management;三月份，公司派她去学习 信息管理。
-In April she was given a raise.;四月，获得了一次加薪。
-Just one month later,;就在一个月以后，
-she was promoted to the position of supervisor of her department.;她又被提升为所在部 门的主管。
-2 In July she was chosen"Employee of the Month.;七月份，她被评选为“ 本月最佳员工”
-"In September she was given another raise.;九月，她再一次得到了 加薪
-In October she was invited to apply for;在十月她获得一次机会 申请
-a position in the company's overseas office in New York.;公司驻纽约的海外办事 处的职位。
-And in December she was given the new job and flown to America to begin to work.;十二月，唐娜获得那份 工作，并动身飞往美国 走上了她的 新的工作岗位。
-3 Donna certainly has had a very incredible year.;这对唐娜来说当然是 不可思议的一年
-She can't believe all the amazing things that have happened to her;她不敢相信自己遇到那 么多幸运的事情
-since she was hired just one year ago.;她才被聘用一年
-4 You see, hard work and devotion paid off for Donna.;你瞧，全身心投入工作 换来了唐娜的的成就。
-She knows the golden rule "you must give to receive.";她深知为人的黄金准则， 那就是“有付出才有收 获”
-She gave one hundred percent effort to her job;她对工作付出了百分之 百的努力，
-and reached unbelievable success!;也取得了令人难以置信的 成功。
-第六节 三最短文 第1篇：江泽民主席接受 美国《新闻周刊》采访;
-Q: What impressed you during your U.S. visit?;(此次美国之行有什么 令您印象深刻?)
-A: What impressed me most was that wherever I went,;令我印象最深的是， 无论走到哪里
-I was received in a very friendly manner by the American people.;我都得了美国人民非常 友好的接待。
-And I was given a very warm reception by the U.S. government;美国政府给予我极其热 情的接待，
-and the various non-governmental organizations.;和各种非政府组织依然 给予机器热情的款待
-And I was able to have very sincere and candid conversations with;同时还有机会进行既 真诚又坦率的谈话
-people from various walks of life including government officials..;包括政府官员在内的各 界人士
-And these exchanges of views have proven very helpful;所有这些观点的交流已 经证实是非常有助于
-in promoting mutual understanding between the two sides.;促进两国之间的相互 了解。
-A: What impressed me most was that wherever I went,;令我印象最深的是，无 论走到哪里
-I was received in a very friendly manner by the American people.;我都得了美国人民非常 友好的接待。
-And I was given a very warm reception by the U.S. government;美国政府给予我极其热 情的接待，
-and the various non-governmental organizations.;和各种非政府组织依然 给予机器热情的款待
-And I was able to have very sincere and candid conversations;同时还有机会进行既 真诚又坦率的谈话。
-with people from various walks of life including government officials..;包括政府官员在内的各 界人士
-And these exchanges of views have proven very helpful;所有这些观点的交流已 经证实是非常有助于
-in promoting mutual understanding between the two sides.;促进两国之间的相互了 解。
-第七节 生活实际问题- 单相思，我该怎么办? Unrequited love 单恋;
-Dear Mr. Know-it-all,;亲爱的万事通先生，
-1 In 1997, when I was finishing college,;1 在我1997年大学毕 业之际,
-I met a beautiful girl and we became good friends.;我遇上了一位漂亮的女 孩并成为了好朋友.
-After graduation we kept in touch through letters.;毕业后，我们一直保持 着书信来往。
-Gradually I found I was in love with her.;渐渐地，我发觉我爱 上了她。
-2 As a result, I refused the advances of another woman I knew in my office,;2 结果，我拒绝了办 公室一位女孩的求爱，
-and at that point, I realized I should make my feelings known to the woman I loved.;与此同时，我认识到应 该让我所爱的人知道 我的感情。
-3 I Wrote a letter to her expressing my love. She responded right away.;3 于是，我写了一封 信向她表达我的爱意。 她很快就给我回信了
-To my great disappointment, she refused my love,;让我失望至极的是，她 拒绝了我.
-saying she had always thought of me as her big brother;她说，她一直都把我当 成是大哥哥
-and that she just enjoyed exchangin ideas and thoughts with me.;只是喜欢与我交流思想 而已
-I am in so much pain now and don't know what to do.;我现在伤心极了，不知 道如何是好.
-Should I continue to keep in touch with her;我应该继续与她联系呢，
-or forget her and disappear from her life?;还是忘记她、从她的视 线中消失?
-I hope that I can get some advice from big sister Know-it-all.;我希望万事通大哥能给 我一些建议。
-Dear LiYang,;亲爱的李阳，
-1 On a pain scale of one to ten, unrequited love, or love that is given but not returned;1 在大大小小的痛楚中， 单相思或没有回报的爱
-can be right up there just above an operation or a visit to the dentist.;所带来的痛楚和手术或看 牙医后的痛相比，
-It is much worse than both. Medical procedures tend to heal quickly.;前两者更甚于后两者。 医疗手段可以很快治 愈肉体的创伤，
-Broken hearts can take years to heal and sometimes never do.;而破碎的心却需要多年 才能复原，有时甚至终 生也难以愈合。
-2 Most of us have our first run in/encounter /experience with;2 大多数人都有过的 经历
-unrequited love in our late teens, during high school.;十八九岁在学校里时单 相思
-We watch from afar as our truly beloved wanders the halls of the school.;远远地看着自己所爱的 人在学校大礼堂漫步
-We make every effort to spend as much time with that person as possible.;想方设法地尽可能与心 仪的人呆在一起；
-We also make every effort to be sure;我们也会力图把爱埋在 心底，
-that person does not know how in love we really are.;不让对方知道我们是多 么的爱她。
-But that is no way to go through life.;然而，我们总不能就这 样度过一生。
-3 So then comes theinevitable/ unavoideble day when we have watched;3 因此，在那个迟早 都要面临的日子里当看了
-"Titanic" too many times or listened to too much Celine Dion;无数次"铁达尼号" "和听了无数遍席林迪翁 的歌以后
-and we get up our courage and go to them in a dramatic flurry;我们终于鼓起勇气在 忐忑不安中走向她们。
-and confess our true feelings.;袒露我们我们的情感。
-4 A couple of hours later it is all over with;4 几小时之后，一切都 已结束。
-and all we want to do is turn back time and go back to admiring them from afar.;我们唯一所希望的就是 让时光倒流。回到远远 地赞赏她们的那个时候
-We want to go back to the sweent taste of our fantasies thinking how wonderful;回到我们甜美的梦境中， 想着有多么的美妙
-it will be when we can be together.;能与她在一起
-We want to go back there because rejection leaves a bad taste in our mouths;我们想回到从前，只因 她的拒绝
-that we can never quite get rid of.;在我们心中留下的阴影 挥之不去。
-My advice to you is let her go.You can't force her to fall in love with you .;我的建议是由她去。你 不可能强迫她爱上你。
-The only thing wrose is begging her to love you.;更差的是企求她爱你。
-It is difficult for me to even advise you to maintain your good friendship with her,;我甚至难以建议你继续 保持与她的友谊，
-because much like being on teeter-totter with someone heavier than yourself,;因为对我来说这是一件 很难的事，这叫你与一个 比你重许多的人玩跷跷板 没什么区别。
-things will just never be even/balanced/equal;结果都是不可能的。
-I hope you feel better and I wish you the best of luck.;希望我所说的对你有 帮助，祝你好运！
-第八节 成语的挑战 *I'm sick and tired of having to support of my brother;我已经烦透照顾我弟弟了
-just because he refuses to go out and find a job.;只因为他不肯出去找工 作，
-*I'm sick and tired of having to support of my brother;我已经烦透照顾我弟弟了
-just because he refuses to go out and find a job.;只因为他不肯出去找工 作，
-I'm sick and tired of having to support of my husband;我已经烦透照顾我丈夫了
-just because he refuses to go out and find a job.;只因为他不肯出去找工 作，
-Going Out for the Evening;晚上外出
-A: Let's go to the movies. There's a good one playing now.;(去看电影吧，有部好片 子正在放映。)
-B: I'd like to, but I can't. I really have to study.;我想去，但是不行，我要 学习。
-I wasted the whole afternoon.;我已经浪费了一个下午.
-I forgot I had to brush up on my English.;我忘记温习英语了。
-Then, all of a sudden I remembered.;我突然才想起
-A: Oh, come on! We'll be home early/before 11.;(噢，走吧!我们会早点 儿回家的。/十一之前回 来的。)
-B: No, I'd better not. I have a big exam tomorrow.;不，我不能这样。我明 天有一个考试。
-I was about to study when you came in. You know how it is.;你进来的时候我正要开 始学习呢。你也知道的，
-If you don't study, you don't pass. That goes without saying;如果不准备的话，毫无 疑问会通过不了。
-A: Exam? Tomorrow? Oh- oh!;(考试?明天?噢噢!)
-B: What's the matter /What's wrong?;(怎么啦?)
-A: I just remembered. I have a test, too!;(我刚记起我明天也有 考试!)
-B: We can go to the movies some other time.;我们可以下次去看电 影嘛。
-第一笔财富：;
-brush up on something: review something to make it fresh again in one's mind;提高；改进；重温；再 练。
-*They came here to brush up on technology.;(他们来此以求提高技 术。)
-*I really need to brush up on my English.;(我确实需要提高我的 英语水平。)
-*I'm going to give a speech tomorrow, so I have to brush up on my notes.;(明天我要进行一场演讲， 因此，我必须整理一下 我的笔记。)
-*Professor Wang had not given a talk on management for a long time,;王教授很久没有讲授管理 方面的课程了,
-so he had to brush up on some of the new ideas. 他必须学习研究一下一 些新的发展;
-all of a sudden: something happening quickly; without advance warning.;(口语)突然；忽然；出其 不意地；冷不防。
-*Lisa looked very sad, but then, all of a sudden, she began to laugh.;(丽萨看起来很悲伤， 但突然她大笑起来。)
-*All of a sudden, she burst into laughter.;(她突然大笑起来。)
-*They were sitting quietly when all of a sudden there was a loud noise.;(他们正静静地坐着， 突然传来一声巨响。)
-*It started out to be a sunny day. They, all of a sudden,;天本来晴朗，突然
-it became cloudy and began to rain。;突然变得多云开始下 起雨。
-had better('d better): should do something; ought to do something.;最好……；应该……。
-*You had better not go out today.;(今天你最好不要外出。)
-*I think we'd better discuss it more.;(我认为我们应该进一 步讨论这事。)
-*I'd better go now or I'll be late for class.;(我最好现在就走， 否则我上课就会迟到。)
-*You'd better take your raincoat because it's supposed to rain today.;(你最好带上雨衣，今天 能会下雨。)
-第四笔财富： about to: on the point of doing something.;刚要；打定主意要。
-*We are just about to leave.;(我们正准备离开。)
-Cathy was just about to leave when Mr. Lee invited her to stay for dinner.;凯茜正准备离开的时候， 李先生邀请她留下来吃 晚饭。
-*I'm not about to waste my time doing something foolish.;(我绝不再浪费时间做愚 蠢的事了。)
-*Stone was about to leave when the telephone rang.;(石头正准备离开，电话 铃响了。)
-第五笔财富： Goes without saying:;不言而喻；
-something is so obvious that it doesn't have to be mentioned.;不言而喻，不用说。
-*It goes without saying that our success depends on diligence.;(不用说，我们的成功取 决于勤奋。)
-*It goes without saying that children should not play with guns.;(不用说，小孩不应当 玩弄枪枝。)
-*Mary's an excellent student.;玛丽是个优秀的学生
-It goes without saying that her parents are very proud of her.;(不用说，她的父母以她 为荣。)
-*Anne just told me she can't go with us. It goes without saying we're disappointed.;(安娜刚告诉我不能和我 们一起去了，不用说，我 们都很失望。)
-第六笔财富： What's the matter? ＝What is wrong?;怎么啦?出了什么事?
-*What's the matter with Kate? She looks angry.;凯特怎么啦?她好像很 生气.
-*What's the matter with this computer?;(这台计算机出了什么 毛病?)
-*How cold your hands feel! What's the matter with you?;(你的手怎么这样冰冷! 你怎么啦!)
-SUBSTITUTION DRILL;
-1I have to brush up on my French/English/ history/grammar rules /speaking skills.;
-2All of a sudden I woke up/I remembered her name/she left the room/it began to rain;
-/Kim started to cry/ Stone became angry/ Bill began to laugh/;
-Hillary wanted to leave.;
-3I'd better not go to the movies tonight/ tell Lee what happened /eat dinner now/;
-lose those important papers/fail the exam/ sell my car/buy that house/;
-give that psycho my phone number.;
-4I was about to kill myself when it began to rain/study when you came in/go when the;
-phone rang/write her a note when she arrived/eat dinner when Stone called me/;
-take a bath when the doorbell rang.;
-5 It goes without saying that we should be on time/time is;
-money/honesty is the best policy/we must study hard/haste makes waste/a penny saved;
-is a penny earned/many hands make light work/ you're as old as you feel/education is;
-important/good health is essential.;
-Any proverb can follow the idiom"it goes without saying"because their advice is;
-so well known that it shouldn't need to be repeated.;
-6 What's the matter? You look angry/tired/ upset/bored/pissed off /so happy/so sick;
-/You're trembling/ crying/Stone is yelling.;
+#第二部 • 第三节：最疯狂、最典型的美国发音
+
+— 50 个句子，让你练得口干舌燥！
+
+---
+
+  <div style="padding: 32px">
+  <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=13139265" frameborder=0 allowfullscreen></iframe>
+  </div>
+
+<strong>Greatest Sentences Ever to Practice [æ] Sound</strong>
+
+1. If you exaggerate, you will sound fantastically American! 如果将发音夸大一些，你听起来会美国味十足！
+
+2. A: My exam was a disaster. 我的考试简直是一塌糊涂。  
+B: You didn't pass? That's too bad. You'll have another chance. 你没有通过吗？太遗憾了。你会有另外一个机会的。  
+A: No. That was my last chance. 不，那是我最后一次机会。
+
+3. That's a fact. 那是事实。
+
+4. Saturday I am planning to go dancing. 星期六我计划去跳舞。
+
+5. I am happy/glad to have you back from Japan. 我很高兴你从日本回来。
+
+6. That man/actor had a bad accent and bad grammar. 那个男人/演员口音很糟糕，且语法错误很多。
+
+7. There was a bad traffic accident. 发生了一起糟糕的交通事故。  
+That hacker ran into the back of my van and killed my cat. 出租车撞到了我面包车的后背，撞死了我的猫。  
+Too bad it wasn't my wife because I loved my cat. 太遗憾了，死的不是我太太，因为我爱我的猫。
+
+8. Don't laugh behind other people's back. 不要在背后取笑别人。
+
+9. Come back after you finish your math exam. 完成数学测验之后回来。
+
+10. My grandfather was a bad man, and he treated my grandmother very badly. 我的祖父是个坏人，他对祖母非常不好。
+
+11. I'm so glad that nothing bad has happened. 我很高兴没发生什么糟糕的事情。
+
+12. As a matter of fact, I think he is an asshole『讨厌的人；肛门；屁眼儿』. 事实上，我认为他是个混蛋。
+
+13. Look at that fat ass on that fat man. 看看那个胖子的屁股多大。
+
+14. You're not such a had apple/bad egg after all. 你毕竟还不是太坏。
+
+15. There's always a bad apple in every class. 每个班都有几粒老鼠屎。
+
+16. Good employees get a pat on the back, while good secretaries get a pat on the ass. 员工表现得好老板会拍拍他的背，而秘书做得好老板则会拍拍她的屁股。
+
+17. She deserves a pat on the back. 她应该得到表扬。
+
+18. Pats on the back weren't enough, he wanted fast cash. 只有表扬是不够的，他要的是看得见、摸得着的现金。
+
+19. These back-to-back appointments are giving me a heart attack/killing me/affecting my health. 这一连串的约会使得我疲于奔命。
+
+20. Back-to-back defeats made him sad. 连续的失败使他很伤心。
+
+    <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=13139266" frameborder=0 allowfullscreen></iframe>
+
+21. Stop picking on me and get off my back. Man! I've had it. 别再对我进行挑剔，别再找我麻烦了。我受够了！
+
+22. Get off my back, will ya? I'll do it when I have time. 别罗嗦了，好不好？我有时间就去做。
+
+23. Get your crap off my bed! 把你那些乱七八糟的东西从我床上搬走。
+
+24. Laughter has no foreign accent. 笑声没有外国口音。
+
+25. Such men are the backbone『骨干；支柱；基础』of the country. 这样的人是国家的栋梁。
+
+26. Selfishness and unhappiness often go hand in hand. 自私的人通常无幸福可言。
+
+27. He who laughs last laughs best. 谁笑到最后，谁就笑得最好。
+
+28. The voters had a backlash against rising gas taxes. 投标人强烈反对增加汽油税。
+
+29. A bad black man tried to crash the rally, but my dad called the cops. 一个黑人坏蛋企图要混进我们的聚会，我父亲打电话叫来了警察。
+
+30. The manager was hired at a handsome salary. 这个经理被高薪聘用。
+
+31. We must take action before it is too late. 我们必须及早采取行动。
+
+32. Actions are more important than words. 行动胜似语言。
+
+33. That man is always handing out『给予』unwanted advice. 那个人总是给别人没有用的建议。
+
+34. We handed in our exams at the last minute of the class. 在下课的最后时刻，我们交了考试卷。
+
+35. The two brothers worked hand in hand. 两兄弟携手合作。
+
+36. The family went to the graduation at Stanford. 全家人去斯坦福大学参加了毕业典礼。
+
+37. I ran as fast as I could. 我跑得不能再快了。
+
+38. We had to act fast. 我们不得不尽快行动。
+
+39. It happened in the past. 它发生在过去。
+
+40. Don't miss your last chance. 不要错过最后的机会。
+
+41. It is absolutely impossible to cure AIDS. 要治愈艾滋病是绝对不可能的。
+
+42. We will have a fat chance to win the game on Saturday. 我们几乎没有可能赢得星期六的比赛。
+
+43. Casual dress is becoming more and more fashionable. 休闲服装变得越来越流行了。
+
+44. The match won't catch. 这火柴擦不着。
+
+45. The dog went after a rabbit but didn't catch it. 狗追兔子，但没有逮住兔子。
+
+46. The mad dog ran past Dan. 那疯狗从丹身边跑过。
+
+47. Alice dashed to the back of the shack『简陋木屋』to stash『 藏匿；存放』the bag. 艾丽斯跑到小木屋后面把包藏起来。
+
+48. Stan took a rabbit from his magic hat. 斯坦从他的魔术帽里把兔子拿出来。
+
+49. A: Damn it. 混蛋。  
+B: Watch your mouth! 嘴巴放干净一点。  
+A: I learned that bad habit from you. You should have watched your mouth first. 这个坏习惯是你传给我的。你要先注意自己。
+
+**nasty**: dirty, bad, unpleasant, disgusting, unkind, offensive, bad to deal with or experience.
+
+1. a nasty mind 卑鄙肮脏的思想
+
+2. nasty language 污秽不堪的语言
+
+3. live a cheap and nasty life 过低贱的生活
+
+5. It's a tacky, nasty little movie. 这是一部庸俗下流不值一看的电影。
+
+6. a nasty smell 难闻的气味
+
+7. a nasty taste 难吃的味道
+
+8. cold, wet, nasty weather 寒冷多雨的恶劣天气
+
+9. a nasty habit 恶心
+
+10. a nasty temper 臭脾气
+
+11. a nasty attack of cough 一阵剧烈的咳嗽
+
+12. a nasty accident 严重的事故
+
+13. a nasty look in his eyes 眼露凶光
+
+14. a nasty room 脏乱的房间
+
+15. a nasty book 下流书
+
+16. say nasty things about sb 恶语中伤某人
