--- a/_source/2_6.md
+++ b/_source/2_6.md
@@ -1,135 +1,21 @@
-第六节 三最短文 第1篇：江泽民主席接受 美国《新闻周刊》采访;
-Q: What impressed you during your U.S. visit?;(此次美国之行有什么 令您印象深刻?)
-A: What impressed me most was that wherever I went,;令我印象最深的是， 无论走到哪里
-I was received in a very friendly manner by the American people.;我都得了美国人民非常 友好的接待。
-And I was given a very warm reception by the U.S. government;美国政府给予我极其热 情的接待，
-and the various non-governmental organizations.;和各种非政府组织依然 给予机器热情的款待
-And I was able to have very sincere and candid conversations with;同时还有机会进行既 真诚又坦率的谈话
-people from various walks of life including government officials..;包括政府官员在内的各 界人士
-And these exchanges of views have proven very helpful;所有这些观点的交流已 经证实是非常有助于
-in promoting mutual understanding between the two sides.;促进两国之间的相互 了解。
-A: What impressed me most was that wherever I went,;令我印象最深的是，无 论走到哪里
-I was received in a very friendly manner by the American people.;我都得了美国人民非常 友好的接待。
-And I was given a very warm reception by the U.S. government;美国政府给予我极其热 情的接待，
-and the various non-governmental organizations.;和各种非政府组织依然 给予机器热情的款待
-And I was able to have very sincere and candid conversations;同时还有机会进行既 真诚又坦率的谈话。
-with people from various walks of life including government officials..;包括政府官员在内的各 界人士
-And these exchanges of views have proven very helpful;所有这些观点的交流已 经证实是非常有助于
-in promoting mutual understanding between the two sides.;促进两国之间的相互了 解。
-第七节 生活实际问题- 单相思，我该怎么办? Unrequited love 单恋;
-Dear Mr. Know-it-all,;亲爱的万事通先生，
-1 In 1997, when I was finishing college,;1 在我1997年大学毕 业之际,
-I met a beautiful girl and we became good friends.;我遇上了一位漂亮的女 孩并成为了好朋友.
-After graduation we kept in touch through letters.;毕业后，我们一直保持 着书信来往。
-Gradually I found I was in love with her.;渐渐地，我发觉我爱 上了她。
-2 As a result, I refused the advances of another woman I knew in my office,;2 结果，我拒绝了办 公室一位女孩的求爱，
-and at that point, I realized I should make my feelings known to the woman I loved.;与此同时，我认识到应 该让我所爱的人知道 我的感情。
-3 I Wrote a letter to her expressing my love. She responded right away.;3 于是，我写了一封 信向她表达我的爱意。 她很快就给我回信了
-To my great disappointment, she refused my love,;让我失望至极的是，她 拒绝了我.
-saying she had always thought of me as her big brother;她说，她一直都把我当 成是大哥哥
-and that she just enjoyed exchangin ideas and thoughts with me.;只是喜欢与我交流思想 而已
-I am in so much pain now and don't know what to do.;我现在伤心极了，不知 道如何是好.
-Should I continue to keep in touch with her;我应该继续与她联系呢，
-or forget her and disappear from her life?;还是忘记她、从她的视 线中消失?
-I hope that I can get some advice from big sister Know-it-all.;我希望万事通大哥能给 我一些建议。
-Dear LiYang,;亲爱的李阳，
-1 On a pain scale of one to ten, unrequited love, or love that is given but not returned;1 在大大小小的痛楚中， 单相思或没有回报的爱
-can be right up there just above an operation or a visit to the dentist.;所带来的痛楚和手术或看 牙医后的痛相比，
-It is much worse than both. Medical procedures tend to heal quickly.;前两者更甚于后两者。 医疗手段可以很快治 愈肉体的创伤，
-Broken hearts can take years to heal and sometimes never do.;而破碎的心却需要多年 才能复原，有时甚至终 生也难以愈合。
-2 Most of us have our first run in/encounter /experience with;2 大多数人都有过的 经历
-unrequited love in our late teens, during high school.;十八九岁在学校里时单 相思
-We watch from afar as our truly beloved wanders the halls of the school.;远远地看着自己所爱的 人在学校大礼堂漫步
-We make every effort to spend as much time with that person as possible.;想方设法地尽可能与心 仪的人呆在一起；
-We also make every effort to be sure;我们也会力图把爱埋在 心底，
-that person does not know how in love we really are.;不让对方知道我们是多 么的爱她。
-But that is no way to go through life.;然而，我们总不能就这 样度过一生。
-3 So then comes theinevitable/ unavoideble day when we have watched;3 因此，在那个迟早 都要面临的日子里当看了
-"Titanic" too many times or listened to too much Celine Dion;无数次"铁达尼号" "和听了无数遍席林迪翁 的歌以后
-and we get up our courage and go to them in a dramatic flurry;我们终于鼓起勇气在 忐忑不安中走向她们。
-and confess our true feelings.;袒露我们我们的情感。
-4 A couple of hours later it is all over with;4 几小时之后，一切都 已结束。
-and all we want to do is turn back time and go back to admiring them from afar.;我们唯一所希望的就是 让时光倒流。回到远远 地赞赏她们的那个时候
-We want to go back to the sweent taste of our fantasies thinking how wonderful;回到我们甜美的梦境中， 想着有多么的美妙
-it will be when we can be together.;能与她在一起
-We want to go back there because rejection leaves a bad taste in our mouths;我们想回到从前，只因 她的拒绝
-that we can never quite get rid of.;在我们心中留下的阴影 挥之不去。
-My advice to you is let her go.You can't force her to fall in love with you .;我的建议是由她去。你 不可能强迫她爱上你。
-The only thing wrose is begging her to love you.;更差的是企求她爱你。
-It is difficult for me to even advise you to maintain your good friendship with her,;我甚至难以建议你继续 保持与她的友谊，
-because much like being on teeter-totter with someone heavier than yourself,;因为对我来说这是一件 很难的事，这叫你与一个 比你重许多的人玩跷跷板 没什么区别。
-things will just never be even/balanced/equal;结果都是不可能的。
-I hope you feel better and I wish you the best of luck.;希望我所说的对你有 帮助，祝你好运！
-第八节 成语的挑战 *I'm sick and tired of having to support of my brother;我已经烦透照顾我弟弟了
-just because he refuses to go out and find a job.;只因为他不肯出去找工 作，
-*I'm sick and tired of having to support of my brother;我已经烦透照顾我弟弟了
-just because he refuses to go out and find a job.;只因为他不肯出去找工 作，
-I'm sick and tired of having to support of my husband;我已经烦透照顾我丈夫了
-just because he refuses to go out and find a job.;只因为他不肯出去找工 作，
-Going Out for the Evening;晚上外出
-A: Let's go to the movies. There's a good one playing now.;(去看电影吧，有部好片 子正在放映。)
-B: I'd like to, but I can't. I really have to study.;我想去，但是不行，我要 学习。
-I wasted the whole afternoon.;我已经浪费了一个下午.
-I forgot I had to brush up on my English.;我忘记温习英语了。
-Then, all of a sudden I remembered.;我突然才想起
-A: Oh, come on! We'll be home early/before 11.;(噢，走吧!我们会早点 儿回家的。/十一之前回 来的。)
-B: No, I'd better not. I have a big exam tomorrow.;不，我不能这样。我明 天有一个考试。
-I was about to study when you came in. You know how it is.;你进来的时候我正要开 始学习呢。你也知道的，
-If you don't study, you don't pass. That goes without saying;如果不准备的话，毫无 疑问会通过不了。
-A: Exam? Tomorrow? Oh- oh!;(考试?明天?噢噢!)
-B: What's the matter /What's wrong?;(怎么啦?)
-A: I just remembered. I have a test, too!;(我刚记起我明天也有 考试!)
-B: We can go to the movies some other time.;我们可以下次去看电 影嘛。
-第一笔财富：;
-brush up on something: review something to make it fresh again in one's mind;提高；改进；重温；再 练。
-*They came here to brush up on technology.;(他们来此以求提高技 术。)
-*I really need to brush up on my English.;(我确实需要提高我的 英语水平。)
-*I'm going to give a speech tomorrow, so I have to brush up on my notes.;(明天我要进行一场演讲， 因此，我必须整理一下 我的笔记。)
-*Professor Wang had not given a talk on management for a long time,;王教授很久没有讲授管理 方面的课程了,
-so he had to brush up on some of the new ideas. 他必须学习研究一下一 些新的发展;
-all of a sudden: something happening quickly; without advance warning.;(口语)突然；忽然；出其 不意地；冷不防。
-*Lisa looked very sad, but then, all of a sudden, she began to laugh.;(丽萨看起来很悲伤， 但突然她大笑起来。)
-*All of a sudden, she burst into laughter.;(她突然大笑起来。)
-*They were sitting quietly when all of a sudden there was a loud noise.;(他们正静静地坐着， 突然传来一声巨响。)
-*It started out to be a sunny day. They, all of a sudden,;天本来晴朗，突然
-it became cloudy and began to rain。;突然变得多云开始下 起雨。
-had better('d better): should do something; ought to do something.;最好……；应该……。
-*You had better not go out today.;(今天你最好不要外出。)
-*I think we'd better discuss it more.;(我认为我们应该进一 步讨论这事。)
-*I'd better go now or I'll be late for class.;(我最好现在就走， 否则我上课就会迟到。)
-*You'd better take your raincoat because it's supposed to rain today.;(你最好带上雨衣，今天 能会下雨。)
-第四笔财富： about to: on the point of doing something.;刚要；打定主意要。
-*We are just about to leave.;(我们正准备离开。)
-Cathy was just about to leave when Mr. Lee invited her to stay for dinner.;凯茜正准备离开的时候， 李先生邀请她留下来吃 晚饭。
-*I'm not about to waste my time doing something foolish.;(我绝不再浪费时间做愚 蠢的事了。)
-*Stone was about to leave when the telephone rang.;(石头正准备离开，电话 铃响了。)
-第五笔财富： Goes without saying:;不言而喻；
-something is so obvious that it doesn't have to be mentioned.;不言而喻，不用说。
-*It goes without saying that our success depends on diligence.;(不用说，我们的成功取 决于勤奋。)
-*It goes without saying that children should not play with guns.;(不用说，小孩不应当 玩弄枪枝。)
-*Mary's an excellent student.;玛丽是个优秀的学生
-It goes without saying that her parents are very proud of her.;(不用说，她的父母以她 为荣。)
-*Anne just told me she can't go with us. It goes without saying we're disappointed.;(安娜刚告诉我不能和我 们一起去了，不用说，我 们都很失望。)
-第六笔财富： What's the matter? ＝What is wrong?;怎么啦?出了什么事?
-*What's the matter with Kate? She looks angry.;凯特怎么啦?她好像很 生气.
-*What's the matter with this computer?;(这台计算机出了什么 毛病?)
-*How cold your hands feel! What's the matter with you?;(你的手怎么这样冰冷! 你怎么啦!)
-SUBSTITUTION DRILL;
-1I have to brush up on my French/English/ history/grammar rules /speaking skills.;
-2All of a sudden I woke up/I remembered her name/she left the room/it began to rain;
-/Kim started to cry/ Stone became angry/ Bill began to laugh/;
-Hillary wanted to leave.;
-3I'd better not go to the movies tonight/ tell Lee what happened /eat dinner now/;
-lose those important papers/fail the exam/ sell my car/buy that house/;
-give that psycho my phone number.;
-4I was about to kill myself when it began to rain/study when you came in/go when the;
-phone rang/write her a note when she arrived/eat dinner when Stone called me/;
-take a bath when the doorbell rang.;
-5 It goes without saying that we should be on time/time is;
-money/honesty is the best policy/we must study hard/haste makes waste/a penny saved;
-is a penny earned/many hands make light work/ you're as old as you feel/education is;
-important/good health is essential.;
-Any proverb can follow the idiom"it goes without saying"because their advice is;
-so well known that it shouldn't need to be repeated.;
-6 What's the matter? You look angry/tired/ upset/bored/pissed off /so happy/so sick;
-/You're trembling/ crying/Stone is yelling.;
+# 第六节 • 三最短文
+
+— 江泽民主席接受美国《新闻周刊》采访
+
+---
+
+<iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=13255267" frameborder=0 allowfullscreen></iframe>
+ 
+Q: What impressed you during your U.S. visit? 此次美国之行有什么令您印象深刻？
+
+A: What impressed me most was that wherever I went, I was received in a very friendly manner by the American people.  
+令我印象最深的是，无论走到哪里，我都得了美国人民非常友好的接待。
+
+And I was given a very warm reception by the U.S. government, and the various non-governmental organizations.  
+美国政府给予我极其热情的接待，和各种非政府组织给予热情的款待。
+
+And I was able to have very sincere and candid conversations with people from various walks of life including government officials.
+同时还有机会进行既真诚又坦率的谈话，包括政府官员在内的各界人士。
+
+And these exchanges of views have proven very helpful in promoting mutual understanding between the two sides.  
+所有这些观点的交流已经证实是非常有助于促进两国之间的相互了解。
