audio for 2_7.html

--- a/_source/2_7.md
+++ b/_source/2_7.md
@@ -4,7 +4,9 @@
 
 ---
 
-Dear Mr. Know-it-all  
+<iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=13486480" frameborder=0 allowfullscreen></iframe>
+
+Dear Miss Know-it-all  
 亲爱的万事通先生
 
 In 1997, when I was finishing college, I met a beautiful girl and we became good friends.  
@@ -22,7 +24,7 @@ As a result, I refused the advances of another woman I knew in my office, and at
 I wrote a letter to her expressing my love. She responded right away.  
 于是，我写了一封信向她表达我的爱意。她很快就给我回信了。
 
-To my great disappointment, she refused my love, saying she had always thought of me as her big brother, and that she just enjoyed exchangin ideas and thoughts with me.  
+To my great disappointment, she refused my love, saying she had always thought of me as her big brother, and that she just enjoyed exchanging ideas and thoughts with me.  
 让我失望至极的是，她拒绝了我。她说，她一直都把我当成是大哥哥，只是喜欢与我交流思想而已。
 
 I am in so much pain now and don't know what to do.  
@@ -31,15 +33,17 @@ I am in so much pain now and don't know what to do.
 Should I continue to keep in touch with her or forget her and disappear from her life?  
 我应该继续与她联系呢？还是忘记她、从她的视线中消失？
 
-I hope that I can get some advice from big sister Know-it-all. 我希望万事通大姐能给我一些建议。
+I hope that I can get some advice from big sister Miss Know-it-all. 我希望万事通大姐能给我一些建议。
+
+---
 
 Dear Li Yang  
 亲爱的李阳
 
-On a pain scale of one to ten, unrequited love, or love that is given but not returned can be right up there just above an operation or a visit to the dentist. It is much worse than both. Medical procedures tend to heal quickly. Broken hearts can take years to heal and sometimes never do.   
+On a pain scale of one to ten, unrequited love, or love that is given but not returned can be right up there just above an operation or a visit to the dentist. It is much worse than both. Medical procedures tend to heal quickly. But broken hearts can take years to heal and sometimes never do.   
 在大大小小的痛楚中，单相思或没有回报的爱所带来的痛楚和手术或看牙医后的痛相比，前两者更甚于后两者。医疗手段可以很快治愈肉体的创伤，而破碎的心却需要多年才能复原，有时甚至终生也难以愈合。
 
-Most of us have our first run in/encounter/experience with unrequited love in our late teens, during high school.  
+Most of us have our first run in/encounter/experience with unrequited love in our late teens during high school.  
 大多数人都有过十八九岁在学校里时单相思的经历。
 
 We watch from afar as our truly beloved wanders the halls of the school.  
@@ -54,7 +58,7 @@ We also make every effort to be sure that person does not know how in love we re
 But that is no way to go through life.  
 然而，我们总不能就这样度过一生。
 
-So then comes theinevitable/unavoideble day when we have watched "Titanic" too many times or listened to too much Celine Dion, and we get up our courage and go to them in a dramatic flurry, and confess our true feelings.  
+So then comes the inevitable/unavoideble day when we have watched "Titanic" too many times or listened to too much Celine Dion, and we get up our courage and go to them in a dramatic flurry, and confess our true feelings.  
 因此，在那个迟早都要面临的日子里当看了无数次“铁达尼号”和听了无数遍席林迪翁的歌以后，我们终于鼓起勇气在忐忑不安中走向她们，袒露我们的情感。
 
 A couple of hours later it is all over with, and all we want to do is turn back time and go back to admiring them from afar.  
@@ -75,5 +79,8 @@ The only thing wrose is begging her to love you.
 It is difficult for me to even advise you to maintain your good friendship with her, because much like being on teeter-totter with someone heavier than yourself, things will just never be even/balanced/equal.  
 我甚至难以建议你继续保持与她的友谊，因为对我来说这是一件很难的事，这叫你与一个比你重许多的人玩跷跷板没什么区别，结果都是不可能的。
 
-I hope you feel better and I wish you the best of luck.  
+I hope you feel better and I wish you the best of luck!  
 希望我所说的对你有帮助，祝你好运！
+
+Sincerely,  
+Miss Know-it-all
